--- a/department.html
+++ b/department.html
@@ -766,23 +766,42 @@
       </div>
     </section>
 
-    <!-- CTA Section -->
-    <section class="py-16 bg-gradient-to-r from-blue-600 to-indigo-600 text-white">
-      <div class="container mx-auto px-4 fade-in">
-        <div class="max-w-4xl mx-auto text-center">
-          <h2 class="text-3xl md:text-4xl font-bold mb-4">Ready for Specialized Care?</h2>
-          <p class="text-lg mb-8">Our departments are equipped with the latest technology and staffed by experts dedicated to your health. Book an appointment today and experience excellence in healthcare.</p>
-          <div class="flex flex-wrap justify-center gap-4">
-            <a href="contact.html#appointmentform" class="btn-primary px-8 py-3 rounded-full font-semibold flex items-center">
-              <i data-lucide="calendar" class="w-5 h-5 mr-2"></i> Book Appointment
-            </a>
-            <a href="contact.html" class="border-2 border-white text-white px-8 py-3 rounded-full font-semibold hover:bg-white hover:text-blue-600 transition flex items-center">
-              <i data-lucide="phone" class="w-5 h-5 mr-2"></i> Contact Us
-            </a>
-          </div>
-        </div>
+<!-- CTA Section -->
+<section class="py-20 bg-white text-blue-800">
+  <div class="container mx-auto px-4 fade-in flex justify-center">
+
+    <!-- CARD -->
+    <div class="bg-blue-600/10 backdrop-blur-lg rounded-2xl shadow-xl p-10 max-w-3xl w-full text-center">
+
+      <h2 class="text-3xl md:text-4xl font-bold mb-6 text-blue-800">
+        Ready for Specialized Care?
+      </h2>
+
+      <p class="text-lg mb-10 text-gray-700">
+        Our departments are equipped with the latest technology and staffed by experts dedicated to your health. Book an appointment today and experience excellence in healthcare.
+      </p>
+
+      <div class="flex flex-col md:flex-row justify-center gap-4">
+        <a
+          href="contact.html#appointmentform"
+          class="bg-blue-700 text-white px-8 py-4 rounded-full font-semibold hover:bg-blue-800 transition flex items-center justify-center"
+        >
+          <i data-lucide="calendar" class="w-5 h-5 mr-2"></i> Book Appointment
+        </a>
+
+        <a
+          href="contact.html"
+          class="border border-blue-700 text-blue-700 px-8 py-4 rounded-full font-semibold hover:bg-blue-700 hover:text-white transition flex items-center justify-center"
+        >
+          <i data-lucide="phone" class="w-5 h-5 mr-2"></i> Contact Us
+        </a>
       </div>
-    </section>
+
+    </div>
+
+  </div>
+</section>
+
   </main>
 
   <!-- Enhanced Footer -->
