--- a/heirs-institute.html
+++ b/heirs-institute.html
@@ -818,25 +818,42 @@
     </section>
 
     <!-- CTA Section -->
-    <section class="py-16 bg-gradient-to-r from-blue-600 to-indigo-600 text-white">
-      <div class="container mx-auto px-4 fade-in">
-        <div class="max-w-4xl mx-auto text-center">
-          <h2 class="text-3xl md:text-4xl font-bold mb-4">Start Your Healthcare Career Today</h2>
-          <p class="text-lg mb-8">Join Heirs Institute of Allied Health and become part of the next generation of healthcare professionals transforming Nigeria's healthcare landscape.</p>
-          <div class="flex flex-wrap justify-center gap-4">
-            <a href="contact.html" class="btn-primary px-8 py-3 rounded-full font-semibold flex items-center">
-              <i data-lucide="edit" class="w-5 h-5 mr-2"></i> Apply for Admission
-            </a>
-            <a href="contact.html" class="btn-secondary border-2 px-8 py-3 rounded-full font-semibold flex items-center">
-              <i data-lucide="mail" class="w-5 h-5 mr-2"></i> Request Information
-            </a>
-          </div>
-          <p class="mt-6 text-sm">
-            <i data-lucide="phone" class="w-4 h-4 inline mr-1"></i> Call us: <a href="tel:+234123456789" class="underline hover:no-underline">+234 123 456 789</a>
-          </p>
-        </div>
+<section class="py-20 bg-white text-blue-800">
+  <div class="container mx-auto px-4 fade-in flex justify-center">
+
+    <!-- CARD -->
+    <div class="bg-blue-600/10 backdrop-blur-lg rounded-2xl shadow-xl p-10 max-w-3xl w-full text-center">
+
+      <h2 class="text-3xl md:text-4xl font-bold mb-6 text-blue-800">
+        Start Your Healthcare Career Today
+      </h2>
+
+      <p class="text-lg mb-10 text-gray-700">
+        Join Heirs Institute of Allied Health and become part of the next generation of healthcare professionals transforming Nigeria's healthcare landscape.
+      </p>
+
+      <div class="flex justify-center">
+        <a
+          href="contact.html"
+          class="bg-blue-700 text-white px-8 py-4 rounded-full font-semibold hover:bg-blue-800 transition flex items-center justify-center"
+        >
+          <i data-lucide="edit" class="w-5 h-5 mr-2"></i> Apply for Admission
+        </a>
       </div>
-    </section>
+
+      <p class="text-sm text-gray-700 mt-6">
+        <i data-lucide="phone" class="w-4 h-4 inline mr-1"></i>
+        Call us:
+        <a href="tel:+234123456789" class="text-blue-700 underline hover:no-underline font-semibold">
+          +234 123 456 789
+        </a>
+      </p>
+
+    </div>
+
+  </div>
+</section>
+
   </main>
 
   <!-- Enhanced Footer -->
