--- a/blog.html
+++ b/blog.html
@@ -222,23 +222,42 @@
       </div>
     </section>
 
-    <!-- Call to Action Section -->
-    <section class="py-16 bg-gradient-to-r from-blue-600 to-indigo-600 text-white">
-      <div class="container mx-auto px-4 fade-in max-w-full">
-        <div class="text-center">
-          <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-4">Stay Healthy with Expert Advice</h2>
-          <p class="text-base sm:text-lg mb-8 max-w-2xl mx-auto">Subscribe to our blog for the latest updates or book an appointment to discuss your health concerns with our specialists.</p>
-          <div class="flex justify-center space-x-4">
-            <a href="contact.html" class="btn-primary px-6 py-3 rounded-full text-sm flex items-center">
-              <i data-lucide="calendar" class="w-5 h-5 mr-2"></i> Book Appointment
-            </a>
-            <a href="services.html" class="btn-secondary border-2 px-6 py-3 rounded-full text-sm flex items-center">
-              <i data-lucide="arrow-right" class="w-5 h-5 mr-2"></i> Explore Services
-            </a>
-          </div>
-        </div>
+<!-- Call to Action Section -->
+<section class="py-20 bg-white text-blue-800">
+  <div class="container mx-auto px-4 fade-in flex justify-center">
+
+    <!-- CARD -->
+    <div class="bg-blue-600/10 backdrop-blur-lg rounded-2xl shadow-xl p-10 max-w-3xl w-full text-center">
+
+      <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6 text-blue-800">
+        Stay Healthy with Expert Advice
+      </h2>
+
+      <p class="text-base sm:text-lg mb-10 text-gray-700 max-w-2xl mx-auto">
+        Subscribe to our blog for the latest updates or book an appointment to discuss your health concerns with our specialists.
+      </p>
+
+      <div class="flex flex-col md:flex-row justify-center gap-4">
+        <a
+          href="contact.html"
+          class="bg-blue-700 text-white px-8 py-4 rounded-full font-semibold hover:bg-blue-800 transition flex items-center justify-center"
+        >
+          <i data-lucide="calendar" class="w-5 h-5 mr-2"></i> Book Appointment
+        </a>
+
+        <a
+          href="services.html"
+          class="border border-blue-700 text-blue-700 px-8 py-4 rounded-full font-semibold hover:bg-blue-700 hover:text-white transition flex items-center justify-center"
+        >
+          <i data-lucide="arrow-right" class="w-5 h-5 mr-2"></i> Explore Services
+        </a>
       </div>
-    </section>
+
+    </div>
+
+  </div>
+</section>
+
   </main>
 
   <!-- Footer -->
