--- a/index.html
+++ b/index.html
@@ -615,53 +615,83 @@
     </div>
   </section>
 
-  <!-- Call to Action Section -->
-  <section id="cta" class="py-20 bg-gradient-to-r from-blue-600 to-blue-800 text-white">
-    <div class="container mx-auto px-4 fade-in">
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 items-center">
-        <div>
-          <h2 class="text-3xl md:text-4xl font-bold mb-4">Exceptional Care for Your Health Journey</h2>
-          <p class="text-lg mb-6">Discover comprehensive healthcare services delivered with compassion and expertise at our Oye Ekiti and Ado Ekiti branches. Our dedicated team is here to prioritize your health and wellbeing.</p>
-          <div class="flex flex-wrap gap-4">
-            <a href="contact.html#appointmentform" class="bg-white text-blue-600 px-6 py-3 rounded-full font-semibold hover:bg-gray-100 transition flex items-center">
-              <i data-lucide="calendar" class="w-5 h-5 mr-2"></i> Schedule Consultation
-            </a>
-            <a href="services.html" class="border-2 border-white text-white px-6 py-3 rounded-full font-semibold hover:bg-white hover:text-blue-600 transition flex items-center">
-              <i data-lucide="arrow-right" class="w-5 h-5 mr-2"></i> Explore Services
-            </a>
-          </div>
-        </div>
-        <div class="relative">
-          <img src="https://images.unsplash.com/photo-1624727828489-a1e03b79bba8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nzh8fGhlYWx0aGNhcmV8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&q=60&w=600" alt="Healthcare Excellence" class="w-full h-80 object-cover rounded-lg shadow-lg" loading="lazy">
-          <div class="absolute bottom-4 left-4 bg-white text-blue-600 px-4 py-2 rounded-full flex items-center">
-            <i data-lucide="award" class="w-5 h-5 mr-2"></i> Trusted by 15K+ Patients
-          </div>
-        </div>
-      </div>
-      <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mt-12">
-        <div class="text-center bg-white bg-opacity-10 p-4 rounded-lg backdrop-blur-sm">
-          <p class="text-3xl font-bold">15+</p>
-          <p class="text-gray-200">Years Experience</p>
-        </div>
-        <div class="text-center bg-white bg-opacity-10 p-4 rounded-lg backdrop-blur-sm">
-          <p class="text-3xl font-bold">15K+</p>
-          <p class="text-gray-200">Happy Patients</p>
-        </div>
-        <div class="text-center bg-white bg-opacity-10 p-4 rounded-lg backdrop-blur-sm">
-          <p class="text-3xl font-bold">20+</p>
-          <p class="text-gray-200">Medical Experts</p>
-        </div>
-        <div class="text-center bg-white bg-opacity-10 p-4 rounded-lg backdrop-blur-sm">
-          <p class="text-3xl font-bold">24/7</p>
-          <p class="text-gray-200">Emergency Care</p>
+ <!-- Call to Action Section -->
+<section id="cta" class="py-20 bg-white text-blue-800">
+  <div class="container mx-auto px-4 fade-in flex justify-center">
+
+    <!-- WIDER CARD -->
+    <div class="bg-blue-600/10 backdrop-blur-lg rounded-2xl shadow-xl p-10 max-w-4xl w-full text-center">
+
+      <h2 class="text-3xl md:text-4xl font-bold mb-6 text-blue-800">
+        Exceptional Care for Your Health Journey
+      </h2>
+
+      <p class="text-lg mb-10 text-gray-700">
+        Discover comprehensive healthcare services delivered with compassion and expertise at our Oye Ekiti and Ado Ekiti branches. Our dedicated team is here to prioritize your health and wellbeing.
+      </p>
+
+      <!-- Image -->
+      <div class="mb-10 relative">
+        <img
+          src="https://images.unsplash.com/photo-1624727828489-a1e03b79bba8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nzh8fGhlYWx0aGNhcmV8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&q=60&w=600"
+          alt="Healthcare Excellence"
+          class="w-full h-72 object-cover rounded-xl shadow-lg"
+          loading="lazy">
+
+        <div class="absolute bottom-4 left-4 bg-white text-blue-600 px-4 py-2 rounded-full flex items-center shadow-md">
+          <i data-lucide="award" class="w-5 h-5 mr-2"></i> Trusted by 15K+ Patients
         </div>
       </div>
-      <div class="mt-8 text-center">
-        <p class="text-lg font-semibold">Need Immediate Assistance?</p>
-        <p class="text-gray-200">Call: <a href="tel:+234123456789" class="text-white hover:underline font-semibold">+234 123 456 789</a> | <a href="#footer" class="text-white hover:underline">Get Directions</a></p>
+
+      <!-- Buttons -->
+      <div class="flex flex-col md:flex-row gap-4 justify-center mb-12">
+        <a href="contact.html#appointmentform"
+          class="bg-blue-700 text-white px-8 py-4 rounded-full font-semibold hover:bg-blue-800 transition flex items-center justify-center">
+          <i data-lucide="calendar" class="w-5 h-5 mr-2"></i> Schedule Consultation
+        </a>
+
+        <a href="services.html"
+          class="border border-blue-700 text-blue-700 px-8 py-4 rounded-full font-semibold hover:bg-blue-700 hover:text-white transition flex items-center justify-center">
+          <i data-lucide="arrow-right" class="w-5 h-5 mr-2"></i> Explore Services
+        </a>
       </div>
+
+      <!-- Stats -->
+      <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mb-12">
+        <div class="text-center bg-white p-4 rounded-xl shadow-sm border">
+          <p class="text-3xl font-bold text-blue-700">15+</p>
+          <p class="text-gray-600">Years Experience</p>
+        </div>
+        <div class="text-center bg-white p-4 rounded-xl shadow-sm border">
+          <p class="text-3xl font-bold text-blue-700">15K+</p>
+          <p class="text-gray-600">Happy Patients</p>
+        </div>
+        <div class="text-center bg-white p-4 rounded-xl shadow-sm border">
+          <p class="text-3xl font-bold text-blue-700">20+</p>
+          <p class="text-gray-600">Medical Experts</p>
+        </div>
+        <div class="text-center bg-white p-4 rounded-xl shadow-sm border">
+          <p class="text-3xl font-bold text-blue-700">24/7</p>
+          <p class="text-gray-600">Emergency Care</p>
+        </div>
+      </div>
+
+      <!-- Contact -->
+      <div>
+        <p class="text-lg font-semibold text-blue-800">Need Immediate Assistance?</p>
+        <p class="text-gray-600">
+          Call:
+          <a href="tel:+234123456789" class="text-blue-700 hover:underline font-semibold">+234 123 456 789</a>
+          |
+          <a href="#footer" class="text-blue-700 hover:underline">Get Directions</a>
+        </p>
+      </div>
+
     </div>
-  </section>
+
+  </div>
+</section>
+
 
   <!-- Enhanced Footer -->
   <footer id="footer" class="footer-gradient text-white py-12">
