--- a/about.html
+++ b/about.html
@@ -536,31 +536,34 @@
               </div>
             </div>
 
-            <!-- Founder 2: Dr. Soje Anthonia Yemisi -->
-            <div class="founder-card-compact p-6 shadow-lg">
-              <div class="flex items-start space-x-4">
-                <img src="https://images.unsplash.com/photo-1594824476967-48c8b964273f?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&h=200&q=80" alt="Dr. Soje Anthonia Yemisi" class="w-24 h-24 rounded-full object-cover shadow-md flex-shrink-0">
-                <div class="flex-1">
-                  <h3 class="text-xl font-bold text-gray-800">Dr. Soje Anthonia Yemisi</h3>
-                  <p class="text-purple-600 font-semibold mb-2">Co-Founder & Chief Specialist</p>
-                  <div class="flex items-center text-sm text-gray-600 mb-2">
-                    <i data-lucide="graduation-cap" class="w-4 h-4 mr-1 text-purple-600"></i>
-                    <span>Dental & Healthcare Specialist</span>
-                  </div>
-                  <div class="flex items-center text-sm text-gray-600 mb-3">
-                    <i data-lucide="heart" class="w-4 h-4 mr-1 text-purple-600"></i>
-                    <span>Champion of Women's Health</span>
-                  </div>
-                </div>
-              </div>
-              <p class="text-gray-600 text-sm mt-4 mb-4">A passionate healthcare professional dedicated to holistic patient care and community wellness. Co-founded Heirs Multispecialist Hospital with a vision to bring world-class medical services to Ekiti State, particularly focusing on dental care and women's health initiatives.</p>
-              <div class="flex space-x-3 mt-4 pt-4 border-t border-gray-100">
-                <a href="#" class="text-gray-400 hover:text-blue-600 transition"><i data-lucide="facebook" class="w-5 h-5"></i></a>
-                <a href="#" class="text-gray-400 hover:text-pink-600 transition"><i data-lucide="instagram" class="w-5 h-5"></i></a>
-                <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i data-lucide="twitter" class="w-5 h-5"></i></a>
-                <a href="#" class="text-gray-400 hover:text-blue-700 transition"><i data-lucide="linkedin" class="w-5 h-5"></i></a>
-              </div>
-            </div>
+           <!-- Founder 2: Dr. Soje Anthonia Yemisi -->
+<div class="founder-card-compact p-6 shadow-lg">
+  <div class="flex items-start space-x-4">
+    <img src="https://images.unsplash.com/photo-1594824476967-48c8b964273f?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&h=200&q=80" alt="Dr. Soje Anthonia Yemisi" class="w-24 h-24 rounded-full object-cover shadow-md flex-shrink-0">
+    <div class="flex-1">
+      <h3 class="text-xl font-bold text-gray-800">Dr. Soje Anthonia Yemisi</h3>
+      <p class="text-purple-600 font-semibold mb-2">Co-Founder & Mental Health Specialist</p>
+      <div class="flex items-center text-sm text-gray-600 mb-2">
+        <i data-lucide="graduation-cap" class="w-4 h-4 mr-1 text-purple-600"></i>
+        <span>Clinical Psychologist & Trauma Therapist</span>
+      </div>
+      <div class="flex items-center text-sm text-gray-600 mb-3">
+        <i data-lucide="heart" class="w-4 h-4 mr-1 text-purple-600"></i>
+        <span>Founder, Fosterheirs Mental Health Consultancy</span>
+      </div>
+    </div>
+  </div>
+  <p class="text-gray-600 text-sm mt-4 mb-4">
+    A dedicated mental health professional specializing in trauma therapy, counseling, and psycho-social support. Dr. Anthonia Yemisi co-founded Heirs Specialist Hospital and leads Fosterheirs Mental Health Consultancy, providing expert care in addiction recovery, relationship counseling, ADHD management, and holistic emotional well-being.
+  </p>
+  <div class="flex space-x-3 mt-4 pt-4 border-t border-gray-100">
+    <a href="#" class="text-gray-400 hover:text-blue-600 transition"><i data-lucide="facebook" class="w-5 h-5"></i></a>
+    <a href="#" class="text-gray-400 hover:text-pink-600 transition"><i data-lucide="instagram" class="w-5 h-5"></i></a>
+    <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i data-lucide="twitter" class="w-5 h-5"></i></a>
+    <a href="#" class="text-gray-400 hover:text-blue-700 transition"><i data-lucide="linkedin" class="w-5 h-5"></i></a>
+  </div>
+</div>
+
           </div>
         </div>
       </div>
@@ -793,7 +796,6 @@
 
   </div>
 </section>
-
   </main>
 
   <!-- Enhanced Footer -->
