--- a/admin/follow-up-visit.html
+++ b/admin/follow-up-visit.html
@@ -49,7 +49,6 @@
     patients: [
         { id: 'MTP-2024-001', name: 'Mrs. Adebayo Folake' },
         { id: 'MTP-2024-002', name: 'Mr. Ogunleye Samuel' },
-        // Add more patients as needed
     ],
     previousVisit: {
         date: '2024-12-08',
@@ -64,7 +63,6 @@
         return this.patients.filter(p => p.name.toLowerCase().includes(this.searchQuery.toLowerCase()));
     },
     autoSave() {
-        // Simulate autosave
         console.log('Autosaving draft...');
         localStorage.setItem('followUpVisitDraft', JSON.stringify(this.formData));
     },
@@ -79,14 +77,12 @@
     },
     saveAndSchedule() {
         alert('Saving follow-up visit and scheduling next...');
-        // In production, send to server
     },
     init() {
         this.loadDraft();
-        setInterval(() => this.autoSave(), 30000); // Autosave every 30 seconds
+        setInterval(() => this.autoSave(), 30000);
     }
 }" x-init="init">
-
     <!-- Top Navbar -->
     <nav class="bg-white shadow-lg sticky top-0 z-50 border-b-4 border-purple-600">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -171,10 +167,8 @@
             </div>
         </div>
     </nav>
-
     <!-- Main Content -->
     <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6 sm:py-8">
-        
         <!-- Page Header -->
         <div class="mb-8">
             <div class="flex items-center space-x-2 text-sm text-gray-500 mb-3">
@@ -187,7 +181,6 @@
             <h2 class="text-3xl font-bold text-gray-900 mb-2">Follow-up Visit Form</h2>
             <p class="text-gray-600">Record details for subsequent visits</p>
         </div>
-
         <!-- Form and Side Panel Layout -->
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
             <!-- Form Container -->
@@ -227,7 +220,6 @@
                                 </template>
                             </select>
                         </div>
-
                         <!-- Visit Number -->
                         <div class="mb-8 pt-8 border-t border-gray-200">
                             <h4 class="text-lg font-bold text-gray-900 mb-4 flex items-center">
@@ -242,7 +234,6 @@
                                 required
                             >
                         </div>
-
                         <!-- Reason for Follow-up -->
                         <div class="mb-8 pt-8 border-t border-gray-200">
                             <h4 class="text-lg font-bold text-gray-900 mb-4 flex items-center">
@@ -272,7 +263,6 @@
                                 ></textarea>
                             </div>
                         </div>
-
                         <!-- Interval History -->
                         <div class="mb-8 pt-8 border-t border-gray-200">
                             <h4 class="text-lg font-bold text-gray-900 mb-4 flex items-center">
@@ -287,7 +277,6 @@
                                 required
                             ></textarea>
                         </div>
-
                         <!-- Compliance Review -->
                         <div class="mb-8 pt-8 border-t border-gray-200">
                             <h4 class="text-lg font-bold text-gray-900 mb-4 flex items-center">
@@ -301,7 +290,6 @@
                                 class="w-full px-4 py-3 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500"
                             ></textarea>
                         </div>
-
                         <!-- Vital Signs -->
                         <div class="mb-8 pt-8 border-t border-gray-200">
                             <h4 class="text-lg font-bold text-gray-900 mb-4 flex items-center">
@@ -365,7 +353,6 @@
                                 </div>
                             </div>
                         </div>
-
                         <!-- Focused Physical Examination -->
                         <div class="mb-8 pt-8 border-t border-gray-200">
                             <h4 class="text-lg font-bold text-gray-900 mb-4 flex items-center">
@@ -379,7 +366,6 @@
                                 class="w-full px-4 py-3 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500"
                             ></textarea>
                         </div>
-
                         <!-- Investigations Reviewed/Requested -->
                         <div class="mb-8 pt-8 border-t border-gray-200">
                             <h4 class="text-lg font-bold text-gray-900 mb-4 flex items-center">
@@ -393,7 +379,6 @@
                                 class="w-full px-4 py-3 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500"
                             ></textarea>
                         </div>
-
                         <!-- Current Assessment -->
                         <div class="mb-8 pt-8 border-t border-gray-200">
                             <h4 class="text-lg font-bold text-gray-900 mb-4 flex items-center">
@@ -407,7 +392,6 @@
                                 class="w-full px-4 py-3 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500"
                             ></textarea>
                         </div>
-
                         <!-- Updated Treatment Plan -->
                         <div class="mb-8 pt-8 border-t border-gray-200">
                             <h4 class="text-lg font-bold text-gray-900 mb-4 flex items-center">
@@ -421,7 +405,6 @@
                                 class="w-full px-4 py-3 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500"
                             ></textarea>
                         </div>
-
                         <!-- Health Education -->
                         <div class="mb-8 pt-8 border-t border-gray-200">
                             <h4 class="text-lg font-bold text-gray-900 mb-4 flex items-center">
@@ -455,7 +438,6 @@
                                 ></textarea>
                             </div>
                         </div>
-
                         <!-- Referral Status -->
                         <div class="mb-8 pt-8 border-t border-gray-200">
                             <h4 class="text-lg font-bold text-gray-900 mb-4 flex items-center">
@@ -469,7 +451,6 @@
                                 class="w-full px-4 py-3 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500"
                             ></textarea>
                         </div>
-
                         <!-- Next Follow-up Scheduling -->
                         <div class="mb-8 pt-8 border-t border-gray-200">
                             <h4 class="text-lg font-bold text-gray-900 mb-4 flex items-center">
@@ -482,7 +463,6 @@
                                 class="w-full px-4 py-3 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500"
                             >
                         </div>
-
                         <!-- Form Actions -->
                         <div class="flex flex-col sm:flex-row gap-4 pt-6 border-t border-gray-200">
                             <button 
@@ -504,7 +484,6 @@
                     </form>
                 </div>
             </div>
-
             <!-- Side Panel: Previous Visit Summary -->
             <div class="lg:col-span-1 bg-white rounded-2xl shadow-lg border border-gray-200 sticky top-24">
                 <div class="bg-gradient-to-r from-gray-600 to-gray-700 p-6 rounded-t-2xl text-white">
@@ -548,7 +527,6 @@
             </div>
         </div>
     </main>
-
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             lucide.createIcons();
